fix align center

--- a/css/styles.css
+++ b/css/styles.css
@@ -21,7 +21,6 @@
 body {
   font-family: "Sora", sans-serif;
   display: flex;
-  align-items: center;
   justify-content: center;
   /* height: 100vh; */
   background-color: var(--background);
